[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Sprites/MapBackgroundpng.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Sprites/House.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Sprites/Park.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Sprites/RetirementHome.png" type="Texture" id=5]
[ext_resource path="res://remember-1.png.png" type="Texture" id=6]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="MapBackground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character1" type="TextureButton" parent="."]
margin_left = 243.522
margin_top = 135.919
margin_right = 307.522
margin_bottom = 199.919
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character2" type="TextureButton" parent="."]
margin_left = 495.527
margin_top = 379.866
margin_right = 559.527
margin_bottom = 443.866
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character3" type="TextureButton" parent="."]
margin_left = 790.413
margin_top = 146.198
margin_right = 854.413
margin_bottom = 210.198
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remember" type="TextureButton" parent="."]
margin_left = 1022.65
margin_top = 51.3303
margin_right = 1222.65
margin_bottom = 181.33
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Character1" to="." method="_on_Character1_pressed"]
[connection signal="pressed" from="Character2" to="." method="_on_Character2_pressed"]
[connection signal="pressed" from="Character3" to="." method="_on_Character3_pressed"]
[connection signal="pressed" from="Remember" to="." method="_on_Remember_pressed"]
